--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +17,9 @@
     "react-dom": "18.2.0",
     "@expo/webpack-config": "^19.0.0",
     "react-native-svg": "13.9.0",
-    "expo-av": "~13.4.1"
+    "expo-av": "~13.4.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-system-ui": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
