--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,8 +163,8 @@ dependencies {
         }
     }
 
-    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
-    debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
+    debugImplementation("com.facebook.flipper:flipper:0.243.0")
+    debugImplementation("com.facebook.flipper:flipper-network-plugin:0.243.0") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
