--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "windows": "react-native run-windows"
   },
   "dependencies": {
     "expo": "~49.0.15",
@@ -19,10 +20,12 @@
     "react-native-svg": "13.9.0",
     "expo-av": "~13.4.1",
     "expo-splash-screen": "~0.20.5",
-    "expo-system-ui": "~2.4.0"
+    "expo-system-ui": "~2.4.0",
+    "react-native-windows": "0.72.22"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-config": "^0.76.8"
   },
   "private": true
 }
