--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
     "@expo/webpack-config": "^19.0.0",
-    "react-native-svg": "13.9.0",
+    "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-macos": "^0.72.12",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
     "react-native-windows": "0.72.22"
   },
   "devDependencies": {
