--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-macos": "^0.72.12",
+    "react-native-paper": "^4.12.6",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-windows": "0.72.22"
   },
