--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-art": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-macos": "^0.72.12",
@@ -25,7 +27,10 @@
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-native-windows": "0.72.22"
+    "react-native-windows": "0.72.22",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
