--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "expo": "^49.0.21",
+    "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
