--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "expo": "^51.0.18",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.73.6",
-    "react-native-svg": "^14.1.0",
-    "react-native-web": "~0.19.6",
-    "expo-notifications": "~0.28.9"
+    "@expo/metro-runtime": "~4.0.0",
+    "expo": "^52.0.17",
+    "expo-notifications": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
