--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.23",
-    "expo-audio": "^0.3.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -31,19 +30,20 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-gesture-handler": "~2.21.2",
-    "react-native-safe-area-context": "5.0.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-updates": "~0.26.10"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "~19.0.2",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^19.0.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
