--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.23",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-updates": "^0.26.19",
-    "expo-web-browser": "~14.0.1",
-    "react": "18.3.1",
+    "expo": "^53.0.20",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "^0.28.17",
+    "expo-web-browser": "~14.2.0",
+    "react": "19.1.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
