--- a/app.json
+++ b/app.json
@@ -25,7 +25,10 @@
     },
     "plugins": [
       [
-        "expo-audio"
+        "expo-audio",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
       ],
       [
         "expo-screen-orientation",
